--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
    },
    "dependencies": {
       "@heroicons/react": "^2.0.18",
+      "axios": "^1.5.1",
       "react": "^18.2.0",
-      "react-dom": "^18.2.0"
+      "react-dom": "^18.2.0",
+      "react-hot-toast": "^2.4.1",
+      "react-loader-spinner": "^5.4.5"
    },
    "devDependencies": {
       "@types/react": "^18.2.15",
