--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
       "react-loader-spinner": "^5.4.5"
    },
    "devDependencies": {
-      "@types/react": "^18.2.15",
-      "@types/react-dom": "^18.2.7",
+      "@types/react": "^18.2.65",
+      "@types/react-dom": "^18.2.21",
+      "@typescript-eslint/eslint-plugin": "^7.2.0",
+      "@typescript-eslint/parser": "^7.2.0",
       "@vitejs/plugin-react": "^4.0.3",
       "eslint": "^8.45.0",
       "eslint-plugin-react": "^7.32.2",
       "eslint-plugin-react-hooks": "^4.6.0",
       "eslint-plugin-react-refresh": "^0.4.3",
+      "typescript": "^5.4.2",
       "vite": "^4.4.5"
    }
 }
